...
        <!--android:layout_marginTop="10dp"/>-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/time_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/add_time_edit_text"
            android:hint="@string/time_text_hint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
    </android.support.design.widget.TextInputLayout>

...
            android:onClick="onCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/silver"
            android:layout_margin="8px"/>
        <Button
            android:id="@+id/save_button"
            android:text="Save"
            android:onClick="onSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightblue"
            android:textColor="@color/white"
...
