<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_content_coordinator_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/timeRecordsList"
        android:transitionName="windowTransition"
    />
    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_add_button"
        android:src="@drawable/ic_add"
        android:clickable="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        app:backgroundTint="@color/red"
        app:rippleColor="@color/blue"
        app:elevation="6dp"
        app:layout_anchor="@id/timeRecordsList"
        app:layout_anchorGravity="bottom|right|end"
        app:showAsAction="withText"/>

</android.support.design.widget.CoordinatorLayout>